--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@ const canvas = document.getElementById("gameCanvas");
 const ctx = canvas.getContext("2d");
 
 // Load images
-const bgImg = new Image(); bgImg.src = "bg.png";
-const redImg = new Image(); redImg.src = "red.png";
-const greenImg = new Image(); greenImg.src = "green.png";
-const meteorImg = new Image(); meteorImg.src = "/Particle FX 1.3 Free/meteor.png";
-const gameOverImg = new Image(); gameOverImg.src = "gameover.png";
-const explosionSprite = new Image(); explosionSprite.src = "/Particle FX 1.3 Free/pngegg.png"; // 4x5 sprite sheet
+const bgImg = new Image(); bgImg.src = "assets/bg.png";
+const redImg = new Image(); redImg.src = "assets/red.png";
+const greenImg = new Image(); greenImg.src = "assets/green.png";
+const meteorImg = new Image(); meteorImg.src = "assets/meteor.png";
+const gameOverImg = new Image(); gameOverImg.src = "assets/gameover.png";
+const explosionSprite = new Image(); explosionSprite.src = "assets/pngegg.png"; // 4x5 sprite sheet
 
 // Game data
 const redDot = {
