--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ let keys = {};
 document.addEventListener("keydown", e => {
 	keys[e.key] = true;
 	if (e.code === "Space") {
-		shootBeam();
+		// shootBeam();
 	}
 });
 document.addEventListener("keyup", e => keys[e.key] = false);
