--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@ const ctx = canvas.getContext("2d");
 const bgImg = new Image(); bgImg.src = "assets/bg.png";
 const redImg = new Image(); redImg.src = "assets/red.png";
 const greenImg = new Image(); greenImg.src = "assets/green.png";
+const flameImg = new Image(); flameImg.src = "assets/flame.png";
 const meteorImg = new Image(); meteorImg.src = "assets/meteor.png";
 const dogHeadImg = new Image(); dogHeadImg.src = "assets/doghead.png";
+const dogHead1Img = new Image(); dogHead1Img.src = "assets/doghead1.png";
 const gameOverImg = new Image(); gameOverImg.src = "assets/gameover.png";
 const explosionSprite = new Image(); explosionSprite.src = "assets/pngegg.png";
 
@@ -75,19 +77,21 @@ let meteors = [];
 let explosions = [];
 let gameOver = false;
 let score = 0;
-let meteorEnabled = false;
-let greenEnabled = false;
+let meteorEnabled = true;
+let greenEnabled = true;
 let meteorWaveActive = false;
 let meteorWaveTimer = 0;
 let lastScoreCheckpoint = 0;
 
 // Controls
 let beams = [];
+let dogHeadBeams = [];
 let keys = {};
 document.addEventListener("keydown", e => {
 	keys[e.key] = true;
 	if (e.code === "Space") {
 		// shootBeam();
+		shootDogHeadBeam(canvas.width, 455);
 	}
 });
 document.addEventListener("keyup", e => keys[e.key] = false);
@@ -131,6 +135,37 @@ function drawBeams() {
 	}
 }
 
+function shootDogHeadBeam(cx, cy) {
+	const segments = 50; // Số đoạn beam
+	const segmentWidth = 100;
+	const segmentHeight = 50;
+
+	for (let i = 0; i < segments; i++) {
+		const beam = {
+			x: cx + i * segmentWidth,
+			y: cy,
+			width: segmentWidth,
+			height: segmentHeight,
+			speed: 15
+		};
+		dogHeadBeams.push(beam);
+	}
+}
+function updateDogHeadBeams() {
+	for (let i = 0; i < dogHeadBeams.length; i++) {
+		dogHeadBeams[i].x -= dogHeadBeams[i].speed;
+		if (dogHeadBeams[i].x < 0) {
+			dogHeadBeams.splice(i, 1);
+			i--;
+		}
+	}
+}
+function drawDogHeadBeams() {
+	for (let dogHeadBeam of dogHeadBeams) {
+		ctx.drawImage(flameImg, dogHeadBeam.x, dogHeadBeam.y, dogHeadBeam.width, dogHeadBeam.height);
+
+	}
+}
 
 // Meteor logic
 function spawnMeteor() {
@@ -303,6 +338,11 @@ function gameLoop() {
 
 	updateMeteors();
 	drawMeteors();
+
+	//ctx.drawImage(dogHeadImg, canvas.width - 150, 400, 150, 150);
+	//updateDogHeadBeams();
+	//drawDogHeadBeams();
+	//ctx.drawImage(dogHead1Img, canvas.width - 150, 400, 150, 150);
 
 	updateExplosions();
 	drawExplosions();
