--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>Red Dot Game (Explosion AOE)</title>
+	<title>DogRunning (Explosion AOE)</title>
 	<style>
 		body {
 			margin: 0;
